# helloFlask

./: README.md  Untitled.ipynb  app.py  app3.py  appsimple.py  appsimple3.py  pyproject.toml
static/: les_static_sont_là
static/images/: truc
templates/: about.html  form.html  home.html  index.html  indextest.html  les_templates_sont_là
