[tool.poetry]
name = "helloflask"
version = "0.1.0"
description = "Pour ceux ayant effectivement écrit cette commande, j'ai le plaisir d'écrire que vous lisez cette phrase."
authors = ["prenom.nom@adressemail.quelquepart"]

[tool.poetry.dependencies]
python = "^3.8.6"
Flask = "^2.2.2"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
